<resources>
    <string name="app_name">CurrencyConverter</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_fragment_change">$ &lt;-&gt; &#8364;</string>
    <string name="registration_fragment">Registration fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_login">Enter your login</string>
    <string name="c_currency">CCurrency</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?\  </string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="invalid_login">Login must be >3 characters</string>
    <string name="invalid_password">Password must be >3 characters</string>
    <string name="invalid_name">Name must be >3 characters</string>
    <string name="invalid_surname">Surname must be >3 characters</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_surname">Enter your surname</string>
    <string name="no_such_user">Такой пользователь отсутствует</string>
    <string name="incorrect_password">Неверный пароль</string>
    <string name="hi_there_welcome_back">Hi there, welcome back!</string>
</resources>